--- a/Des.css
+++ b/Des.css
@@ -765,8 +765,8 @@ h1{
 
 .closemodal{
   float: right;
-  font-weight: bold;
-  font-size: 30px;
+  font-weight: bolder;
+  font-size: 50px;
   border-radius: 50%;
 }
 
