--- a/Des.css
+++ b/Des.css
@@ -26,7 +26,7 @@ body{
     background-image: url("faithinGod.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
+    background-position: center center;
  }
 }
 
