gateway for youth
gateway for youth

--- a/Des.css
+++ b/Des.css
@@ -754,7 +754,7 @@ h1{
   align-content: center;
   width: 30%;
   height: auto;
-  background-color: rgb(63, 83, 50);
+  background-color: rgb(98, 156, 196);
   border-radius: 8px;
   top: 30%;
   left: 50%;
@@ -926,6 +926,7 @@ input[type=text], input[type=password], input[type=password] {
 @media screen and (max-width: 800px){
     .FormOnecontent{
     width: 100%; 
+    height: auto;
   }
 }
 /*Login Communication*/
