--- a/Des.css
+++ b/Des.css
@@ -693,9 +693,11 @@ hr{
 }
 .youth a i:hover{
   color: blue;
+  cursor: pointer;
 }
 .youth > a:hover{
   color: blue;
+  cursor: pointer;
 }
 .youth a i:hover{
   color: blue;
@@ -1030,7 +1032,7 @@ form {
 
 @media screen and (max-width: 800px){
   .formbodylogin{
-    margin-bottom: 180%;
+    margin-bottom: 200%;
   }
   .formbodysignup{
     margin-bottom: 250%;
